--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h2>I am App component!</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <h2 class="text-primary">I am App component!</h2>
+    </div>
+  </div>
+</div>
