--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <div class="row">
     <div class="col-xs-12 text-center">
       <h2 class="text-primary">I am App component!</h2>
+      <hr/>
+      <app-success-alert></app-success-alert>
     </div>
   </div>
 </div>
