--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 text-center">
+    <div class="col-xs-12">
       <h2 class="text-primary">I am App component!</h2>
-      <hr/>
-      <app-success-alert></app-success-alert>
+      <hr />
+      <div>
+        <app-success-alert></app-success-alert>
+      </div>
+      <div>
+        <app-warning-alert></app-warning-alert>
+      </div>
     </div>
   </div>
 </div>
