--- a/src/app/success-alert/success-alert.component.html
+++ b/src/app/success-alert/success-alert.component.html
@@ -1,2 +1,3 @@
 <p>success-alert works!</p>
-<button [disabled]="allowNewServer" class="btn btn-primary">Add Server</button>
+<button [disabled]="!allowNewServer" class="btn btn-primary">Add Server</button>
+<p [innerText]="allowNewServer"></p>
