--- a/src/app/success-alert/success-alert.component.html
+++ b/src/app/success-alert/success-alert.component.html
@@ -1,5 +1,6 @@
 <label>Server Name</label>
 <input type="text" class="form-control" (input)="onUpdateServer($event)"/>
+<input type="text" [(ngModel)]="serverName">
 <h3>{{serverName}}</h3>
 <p>success-alert works!</p>
 <button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onServerCreation()  ">Add Server</button>
