--- a/src/app/success-alert/success-alert.component.html
+++ b/src/app/success-alert/success-alert.component.html
@@ -1,8 +1,9 @@
-<label>Server Name</label>
-<input type="text" class="form-control" (input)="onUpdateServer($event)"/>
-<input type="text" [(ngModel)]="serverName">
-<h3>{{serverName}}</h3>
-<p>success-alert works!</p>
-<button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onServerCreation()  ">Add Server</button>
-<!-- <p [innerText]="allowNewServer"></p> -->
-<p>{{serverCreationStatus}}</p>
+      <p>success-alert works!</p>
+      <label>Server Name</label><br/>
+      <!-- <input type="text" class="form-control" (input)="onUpdateServer($event)"/> -->
+      <input type="text" [(ngModel)]="serverName">
+      <!-- <h3>{{serverName}}</h3> -->
+      <br/><br/>
+      <button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onServerCreation()  ">Add Server</button>
+      <!-- <p [innerText]="allowNewServer"></p> -->
+      <p>{{serverCreationStatus}}</p>
