--- a/src/app/warning-alert/warning-alert.component.html
+++ b/src/app/warning-alert/warning-alert.component.html
@@ -1,2 +1,9 @@
 <p class="warning">This is warning component!</p>
 <p>{{"Server"}} with Id {{serverId}} is {{serverStatus}}</p>
+
+<h1>Form Assignment</h1>
+<hr/>
+<label>Enter your username </label><br/>  
+<input type="text" [(ngModel)] = "username" class="form-control"/>
+<p>{{username}}</p>
+<button class="btn btn-primary" [disabled] ="!username" (click)="onUserNameUpdate()">Add User</button>
