--- a/src/app/warning-alert/warning-alert.component.html
+++ b/src/app/warning-alert/warning-alert.component.html
@@ -1,5 +1,5 @@
 <p class="warning">This is warning component!</p>
-<p>{{"Server"}} with Id {{serverId}} is {{serverStatus}}</p>
+<p>{{"Server"}} with Id {{serverId}} is <span [ngStyle]="{color:getColor()}">{{serverStatus}}</span></p>
 
 <h1>Form Assignment</h1>
 <hr/>
